--- a/main.html
+++ b/main.html
@@ -10,7 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<ol>
+	<li data-ns-test="shoppingList"> laptop</li>
+	<li data-ns-test="shoppingList"> watch</li>
+	<li data-ns-test="shoppingList"> earphones</li>
 
+</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Manali</li>
+		<li data-ns-test="holidayList">Dubai</li>
+		<li data-ns-test="holidayList">DisneyLand</li>
+
+	</ul>
 </body>
 
 </html>
